# IgnoreGen

./: .gitignore  Cargo.toml  README.md  install.sh
src/: main.rs
src/file_manager/: file_manager.rs  mod.rs
src/ignoregen/: default_ignore.rs  ignoregen.rs  languages.rs  mod.rs
